<resources>
    <string name="app_name">Sneakers App</string>
    <string name="sneakership">SNEAKERSHIP</string>
    <string name="popular">Popular</string>
    <string name="sort_by">Sort by</string>
    <string name="price">Price :</string>
    <string name="colour">Colour :</string>
    <string name="size_uk">Size (uk) :</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">$ Check Out</string>
    <string name="cart">Cart</string>
    <string name="total">Total :</string>
    <string name="order_details">Order Details</string>
    <string name="search">Search</string>
</resources>