<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:paddingVertical="12dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/bebas_neue_regular"
                    android:text="@string/sneakership"
                    android:textColor="@color/light_salmon"
                    android:textSize="26sp"
                   />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/closeSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:rotation="90"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_down" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="24dp"
                    app:srcCompat="@drawable/ic_search" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etSearch"
                    android:hint="@string/search"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp">

                <TextView
                    android:id="@+id/tvPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/popular"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/sort_by"
                    android:textColor="@color/text_gray"
                    android:textSize="18sp"
                    app:drawableEndCompat="@drawable/ic_down"
                    app:layout_constraintBottom_toBottomOf="@id/tvPopular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvPopular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPopular"
                    app:spanCount="2"
                    tools:listitem="@layout/item_product" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>