<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clicklistener"
            type="com.sneakersapp.ui.cart.view.CartFragmentClickListeners" />
        <variable
            name="vm"
            type="com.sneakersapp.ui.cart.viewmodel.CartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".ui.cart.view.CartFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:onClick="@{()->clicklistener.onBackClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textColor="@color/light_salmon"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCartItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="18dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tvOrderDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:srcCompat="@drawable/nike_img"
            tools:listitem="@layout/item_cart_product" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrderDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/order_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvSubTotal"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@{vm.subTotalText}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tvTaxAndCharges"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTaxAndCharges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@{vm.taxText}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tvTotal"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/total"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPriceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_salmon"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@{vm.totalAmount}"
            app:layout_constraintBottom_toBottomOf="@id/tvTotal"
            app:layout_constraintStart_toEndOf="@id/tvTotal"
            app:layout_constraintTop_toTopOf="@id/tvTotal" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_cart_button"
            android:paddingHorizontal="22dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvPriceAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPriceAmount"
            app:layout_constraintTop_toTopOf="@id/tvPriceAmount" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>