<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clicklistener"
            type="com.sneakersapp.ui.product_detail.view.ProductDetailsFragmentClickListeners" />

        <variable
            name="product"
            type="com.sneakersapp.data.models.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.product_detail.view.ProductDetailsFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:rotation="90"
            android:onClick="@{()->clicklistener.onBackClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProductBG"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4:4"
            app:layout_constraintEnd_toStartOf="@id/ivRight"
            app:layout_constraintStart_toEndOf="@id/ivLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:srcCompat="@drawable/bg_product" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLeft"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="28dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="@id/ivProductBG"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivProductBG"
            app:srcCompat="@drawable/ic_down" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivRight"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginEnd="28dp"
            android:rotation="270"
            app:layout_constraintBottom_toBottomOf="@id/ivProductBG"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivProductBG"
            app:srcCompat="@drawable/ic_down" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/ivProductBG"
            app:layout_constraintEnd_toEndOf="@id/ivProductBG"
            app:layout_constraintStart_toStartOf="@id/ivProductBG"
            app:layout_constraintTop_toTopOf="@id/ivProductBG"
            app:srcCompat="@drawable/nike_img"
            tools:listitem="@layout/item_product_img" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvProductImage"
            app:srcCompat="@drawable/nike_img"
            tools:listitem="@layout/item_indicator" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_product_details"
            android:padding="24dp"
            app:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvIndicator">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{product.name +` `+product.year}"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{product.title}"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tvProductName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/size_uk"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProductDes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_product_size"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/tvSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidLine"
                app:layout_constraintTop_toTopOf="@id/tvSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/colour"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSize" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_product_color"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@id/tvColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidLine"
                app:layout_constraintTop_toTopOf="@id/tvColor" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/price"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPriceAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                android:text="@{`$`+product.retailPrice}"
                android:textColor="@color/light_salmon"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tvPrice"
                app:layout_constraintTop_toBottomOf="@id/tvColor" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_cart_button"
                android:paddingHorizontal="22dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:onClick="@{()->clicklistener.onAddToCartClick()}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tvPriceAmount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidLine"
                app:layout_constraintTop_toTopOf="@id/tvPriceAmount" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>